--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     }
     body {
   background: linear-gradient(rgba(247, 208, 208, 0.171), rgba(247, 208, 208, 0.171)),  
-              url('background.png') no-repeat center center fixed;
+              url('keren.webp') no-repeat center center fixed;
   background-size: cover;
   color: #333;
   line-height: 1.6;
